Fix build environment and test typings
- Add eslint.config.js, generated by expo lint.
- tsconfig: explicit types ["jest", "node"]. TypeScript 6 was not picking
  up @types/jest automatically, so typecheck failed only on the tests.
- Pin @types/jest to ^29 to match the jest 29 that jest-expo uses.
- _layout: import db/client only once. Importing `db` already evaluates
  the module, which is where the PRAGMAs are applied; the extra sqliteDb
  import was redundant.
- Document in CLAUDE.md why the Gradle config lives in
  ~/.gradle/gradle.properties: --enable-native-access silences the JNA
  warning under JDK 25 that AGP mistakes for an error in
  configureCMakeDebug, and the truststore avoids the PKIX failure caused
  by AVG's TLS interception.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>